# miniject

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.repocert/: config.toml
src/container/: __init__.py  _container.py
src/miniject/: __init__.py  _container.py  _introspection.py
tests/: test_container.py  test_introspection.py
tools/: check_test_layout.py
