[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniject"
version = "1.0.0"
description = "Lightweight dependency injection container with auto-wiring and scoped child containers."
requires-python = ">=3.11"
license = "MIT"
keywords = ["dependency-injection", "di", "ioc", "container", "auto-wiring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/danielstarman/miniject"

[project.optional-dependencies]
dev = ["pytest", "pyright", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/miniject"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # missing-type-self
    "D",       # pydocstyle (docstrings covered manually)
    "S101",    # assert in tests
]

[tool.pyright]
pythonPath = "src"
include = ["src", "tests"]
typeCheckingMode = "strict"
