[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniject"
version = "0.1.1"
description = "Lightweight dependency injection container with auto-wiring and scoped child containers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["dependency-injection", "di", "ioc", "container", "auto-wiring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/danielstarman/miniject"

[dependency-groups]
dev = ["pytest", "pyright", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/miniject"]

[tool.uv]
required-version = "==0.11.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Any is appropriate at runtime introspection boundaries
    "COM812",  # handled by Ruff's formatter
    "D",       # pydocstyle (docstrings covered manually)
    "EM102",   # inline exception messages are fine for a small library
    "SLF001",  # container internals may coordinate through private helpers
    "TC003",   # keep runtime-visible imports for type-hint introspection
    "TRY003",  # small project; dedicated exception-message helpers add noise
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN001", "PLR2004", "S101"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = "none"
reportUnknownParameterType = "none"
